chore: upgrade to Java 21 (#374)
Closes: MODELINKS-300