@@ -7,11 +7,9 @@ import static org.folio.support.base.TestConstants.TEST_PROPERTY_VALUE;
 
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ThreadLocalRandom;
 import org.folio.entlinks.domain.dto.InstanceLinkDto;
-import org.folio.entlinks.domain.dto.LinksCountDto;
 import org.folio.entlinks.domain.entity.Authority;
 import org.folio.entlinks.domain.entity.InstanceAuthorityLink;
 import org.folio.entlinks.domain.entity.InstanceAuthorityLinkingRule;
@@ -26,21 +24,19 @@ class InstanceAuthorityLinkMapperTest {
   private static final Long TEST_LONG_ID = 789L;
   private final InstanceAuthorityLinkMapperImpl mapper = new InstanceAuthorityLinkMapperImpl();
 
-
   @Test
   void testConvertToDto_InstanceAuthorityLink() {
     InstanceAuthorityLink source = createInstanceAuthorityLink();
 
     InstanceLinkDto dto = mapper.convertToDto(source);
 
-    assertThat(source.getAuthority().getId()).isEqualTo(dto.getAuthorityId());
-    assertThat(source.getAuthority().getNaturalId()).isEqualTo(dto.getAuthorityNaturalId());
-    assertThat(source.getLinkingRule().getId()).isEqualTo(dto.getLinkingRuleId());
-    assertThat(source.getId().intValue()).isEqualTo(dto.getId());
-    assertThat(source.getInstanceId()).isEqualTo(dto.getInstanceId());
-    assertThat(source.getStatus().name()).isEqualTo(dto.getStatus());
-    assertThat(source.getErrorCause()).isEqualTo(dto.getErrorCause());
-
+    assertThat(dto.getAuthorityId()).isEqualTo(source.getAuthority().getId());
+    assertThat(dto.getAuthorityNaturalId()).isEqualTo(source.getAuthority().getNaturalId());
+    assertThat(dto.getLinkingRuleId()).isEqualTo(source.getLinkingRule().getId());
+    assertThat(dto.getId()).isEqualTo(source.getId().intValue());
+    assertThat(dto.getInstanceId()).isEqualTo(source.getInstanceId());
+    assertThat(dto.getStatus()).isEqualTo(source.getStatus().name());
+    assertThat(dto.getErrorCause()).isEqualTo(source.getErrorCause());
   }
 
   @Test
@@ -55,35 +51,37 @@ class InstanceAuthorityLinkMapperTest {
     assertThat(link.getId().intValue()).isEqualTo(source.getId());
     assertThat(link.getInstanceId()).isEqualTo(source.getInstanceId());
     assertThat(link.getStatus().name()).isEqualTo(source.getStatus());
-
   }
 
   @Test
   void testConvertDtoList_InstanceLinkDtoList() {
-    List<InstanceLinkDto> sourceList = List.of(createInstanceLinkDto());
+    var sourceList = List.of(createInstanceLinkDto());
 
-    List<InstanceAuthorityLink> linkList = mapper.convertDto(sourceList);
+    var linkList = mapper.convertDto(sourceList);
 
     assertThat(sourceList).hasSize(linkList.size());
-    assertThat(sourceList.get(0).getAuthorityId()).isEqualTo(linkList.get(0).getAuthority().getId());
-    assertThat(sourceList.get(0).getAuthorityNaturalId()).isEqualTo(linkList.get(0).getAuthority().getNaturalId());
-    assertThat(sourceList.get(0).getLinkingRuleId()).isEqualTo(linkList.get(0).getLinkingRule().getId());
-    assertThat(sourceList.get(0).getId()).isEqualTo(linkList.get(0).getId().intValue());
-    assertThat(sourceList.get(0).getInstanceId()).isEqualTo(linkList.get(0).getInstanceId());
-    assertThat(sourceList.get(0).getStatus()).isEqualTo(linkList.get(0).getStatus().name());
+
+    var expected = sourceList.getFirst();
+    var actual = linkList.getFirst();
+    assertThat(actual.getAuthority().getId()).isEqualTo(expected.getAuthorityId());
+    assertThat(actual.getAuthority().getNaturalId()).isEqualTo(expected.getAuthorityNaturalId());
+    assertThat(actual.getLinkingRule().getId()).isEqualTo(expected.getLinkingRuleId());
+    assertThat(actual.getId().intValue()).isEqualTo(expected.getId());
+    assertThat(actual.getInstanceId()).isEqualTo(expected.getInstanceId());
+    assertThat(actual.getStatus().name()).isEqualTo(expected.getStatus());
   }
 
   @Test
   void testConvert_Map() {
-    Map<UUID, Integer> sourceMap = new HashMap<>();
-    UUID uuidKey = UUID.fromString("38d3a441-c100-5e8d-bd12-71bde492b723");
-    Integer value = 1;
-    sourceMap.put(uuidKey, value);
+    var sourceMap = new HashMap<UUID, Integer>();
+    var uuidKey = UUID.fromString("38d3a441-c100-5e8d-bd12-71bde492b723");
+    var expectedTotal = 1;
+    sourceMap.put(uuidKey, expectedTotal);
 
-    List<LinksCountDto> dtoList = mapper.convert(sourceMap);
-    assertThat(dtoList).hasSize(1);
-    assertThat(uuidKey).isEqualTo(dtoList.get(0).getId());
-    assertThat(value).isEqualTo(dtoList.get(0).getTotalLinks());
+    var actual = mapper.convert(sourceMap);
+    assertThat(actual).hasSize(1);
+    assertThat(actual.getFirst().getId()).isEqualTo(uuidKey);
+    assertThat(actual.getFirst().getTotalLinks()).isEqualTo(expectedTotal);
   }
 
   @NotNull
